; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/nvme/extr_nvme_ns_cmd.c_nvme_ns_cmd_flush.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/nvme/extr_nvme_ns_cmd.c_nvme_ns_cmd_flush.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nvme_namespace = type { i32, i32 }
%struct.nvme_request = type { i32 }

@ENOMEM = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @nvme_ns_cmd_flush(%struct.nvme_namespace* %0, i32 %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.nvme_namespace*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca %struct.nvme_request*, align 8
  store %struct.nvme_namespace* %0, %struct.nvme_namespace** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  %9 = load i32, i32* %6, align 4
  %10 = load i8*, i8** %7, align 8
  %11 = call %struct.nvme_request* @nvme_allocate_request_null(i32 %9, i8* %10)
  store %struct.nvme_request* %11, %struct.nvme_request** %8, align 8
  %12 = load %struct.nvme_request*, %struct.nvme_request** %8, align 8
  %13 = icmp eq %struct.nvme_request* %12, null
  br i1 %13, label %14, label %16

14:                                               ; preds = %3
  %15 = load i32, i32* @ENOMEM, align 4
  store i32 %15, i32* %4, align 4
  br label %28

16:                                               ; preds = %3
  %17 = load %struct.nvme_request*, %struct.nvme_request** %8, align 8
  %18 = getelementptr inbounds %struct.nvme_request, %struct.nvme_request* %17, i32 0, i32 0
  %19 = load %struct.nvme_namespace*, %struct.nvme_namespace** %5, align 8
  %20 = getelementptr inbounds %struct.nvme_namespace, %struct.nvme_namespace* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @nvme_ns_flush_cmd(i32* %18, i32 %21)
  %23 = load %struct.nvme_namespace*, %struct.nvme_namespace** %5, align 8
  %24 = getelementptr inbounds %struct.nvme_namespace, %struct.nvme_namespace* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = load %struct.nvme_request*, %struct.nvme_request** %8, align 8
  %27 = call i32 @nvme_ctrlr_submit_io_request(i32 %25, %struct.nvme_request* %26)
  store i32 0, i32* %4, align 4
  br label %28

28:                                               ; preds = %16, %14
  %29 = load i32, i32* %4, align 4
  ret i32 %29
}

declare dso_local %struct.nvme_request* @nvme_allocate_request_null(i32, i8*) #1

declare dso_local i32 @nvme_ns_flush_cmd(i32*, i32) #1

declare dso_local i32 @nvme_ctrlr_submit_io_request(i32, %struct.nvme_request*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
